--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,4 +17,4 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Run unittests
-      run: python -m unittest 
+      run: python -m unittest discover tests
