--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,20 +1,26 @@
-name: CI Run Unit Tests 
+name: CI Run Unit Tests
 
 on:
   push:
-    
+    branches:
+      - main
+
+
 jobs:
   test:
     strategy:
       matrix:
         os: [windows-latest, ubuntu-latest]
         python-version: ["3.9", "3.10", "3.11", "3.12"]
-    runs-on: ${{ matrix.os }}$
+    runs-on: ${{ matrix.os }}
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
+    - name: Checkout кода
+      uses: actions/checkout@v2
+
+    - name: Установка Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Run unittests
-      run: python -m unittest discover tests
+
+    - name: Запуск unittests
+      run: python -m unittest discover -s tests
