--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - tests_yml_change
 
 
 jobs:
@@ -12,7 +13,6 @@ jobs:
       runs-on: ${{ matrix.os }}
       matrix:
         os: [windows-latest, ubuntu-latest]
-        python-version: ["3.9", "3.10", "3.11", "3.12"]
     steps:
     - name: Checkout кода
       uses: actions/checkout@v2
